--- a/author/package.json
+++ b/author/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@convenience/store": "^1.1.0",
     "cuid": "^1.3.8",
     "moleculer": "^0.13.2",
     "nats": "^1.0.1"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
