--- a/author/Dockerfile
+++ b/author/Dockerfile
@@ -1,8 +1,11 @@
-FROM node:8
+FROM node:current
 
 WORKDIR /app
 ADD . .
 
+ENV NODE_ENV=production
+
 RUN npm install
+RUN node ./salt.js
 
 CMD ["node", "index.js"]
