--- a/book/package.json
+++ b/book/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cuid": "^1.3.8",
+    "@convenience/store": "^1.1.1",
     "moleculer": "^0.13.2",
     "nats": "^1.0.1"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
