--- a/gateway/package.json
+++ b/gateway/package.json
@@ -16,5 +16,8 @@
     "graphql-component": "0.0.1-alpha.19",
     "moleculer": "^0.13.2",
     "nats": "^1.0.1"
+  },
+  "devDependencies": {
+    "standard": "^12.0.1"
   }
 }
