--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,34 @@
-nats:
-    image: 'nats:0.8.0'
-    entrypoint: "/gnatsd -D"
-    expose:
-      - "4222"
-    ports:
-      - "8222:8222"
-    hostname: nats-server
-gateway:
-    build: ./gateway
-    ports:
-        - "4000:4000"
-    links: 
-        - nats:nats-server
-    environment:
-        - DEBUG=graphql:*
-        # - GRAPHQL_DEBUG=1
-author:
-    build: ./author
-    links: 
-        - nats:nats-server
-book:
-    build: ./book
-    links: 
-        - nats:nats-server
+version: "3.7"
+services:
+    nats:
+        image: 'nats:0.8.0'
+        entrypoint: "/gnatsd -D"
+        expose:
+            - "4222"
+        ports:
+            - "8222:8222"
+        hostname: nats-server
+    gateway:
+        build: ./gateway
+        ports:
+            - "4000:4000"
+        links: 
+            - nats:nats-server
+        environment:
+            - DEBUG=graphql:*
+            # - GRAPHQL_DEBUG=1
+    author:
+        build: ./author
+        links: 
+            - nats:nats-server
+        volumes:
+            - author-volume:/data
+    book:
+        build: ./book
+        links: 
+            - nats:nats-server
+        volumes:
+            - book-volume:/data
+volumes:
+    book-volume:
+    author-volume:
