--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -4,19 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "apollo-server-express": "^2.4.8",
+    "express": "^4.16.4",
+    "graphql": "^0.13.2",
+    "graphql-component": "0.0.1-alpha.19",
+    "isomorphic-unfetch": "^3.0.0",
+    "moleculer": "^0.13.9",
+    "nats": "^1.2.10",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "nodemon": "^1.19.0",
+    "react-skeleton-css": "^1.1.0",
     "standard": "^12.0.1"
   }
 }
